--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,9 @@
 
 {% block title %}
       {% if title %}
-      <title>{{ title }} - Janus</title>
+          {{ title }} - Janus
       {% else %}
-      <title>Janus</title>
+          Janus
       {% endif %}
 {% endblock %}
 
@@ -23,11 +23,12 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     {% if current_user.clearance == 1 %}
-                    <li><a href="{{ url_for('attendance_main') }}">Läsnäolo</a></li>
+                    <li><a href="{{ url_for('group_select') }}">Läsnäolo kirjaus</a></li>
+                    <li><a href="{{ url_for('attendance_check') }}">Läsnäolo tarkistus</a></li>
                     {% endif %}
                     {% if current_user.clearance == 0 %}
-                    <li><a href="{{ url_for('admin_main') }}">Admin</a></li>
-                    
+                    <li><a href="{{ url_for('create_user') }}">Lisää käyttäjä</a></li>
+                    <li><a href="{{ url_for('add_student') }}">Lisää oppilas</a></li>                    
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
