--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-        <h1>Terve, {{ current_user.username }}!</h1>
+    <div class="container">
+        <h1>Tervehdys, {{ current_user.username }}!</h1>
+        <p>Olet kirjautunut sisälle Janus läsnäolon seuranta järjestelmään ja toivomme teidän käytön sujuvan mutkitta.</p>
+        <p>Käyttöä helpottavaksi oikealta navigoinnista löytyy Manual linkki, joska avautuu käyttöopas. Kyseinen opas on vielä suppea, mutta toivomme sen riittävän alkuun pääsemiseen.</p>
+        <p>Tämän ohjelmiston tarkoitus on helpottaa sinun tehtäviä oppilaiden läsnäolon kirjauksessa ja seurannassa. Eikö olekin mukavampi pystyä avaamaan selain ja syöttää sivuston url saadakseen tämän nopean toimen tehtyä?</p>
+    </div>
+    <div class="container">
+        <pre>{{ version }}</pre>
+    </div>
 {% endblock %}
