On branch development  Changes to be committed: 	modified:   app/forms.py 	modified:   app/models.py 	modified:   app/routes.py 	modified:   app/static/Admin_manual.pdf 	modified:   app/static/Opettaja_manual.pdf 	new file:   app/templates/add_groups.html 	modified:   app/templates/base.html 	modified:   app/templates/check_attendance.html 	modified:   app/templates/log_attendance.html 	modified:   requirements.txt 	modified:   version_history.txt

--- a/app/templates/log_attendance.html
+++ b/app/templates/log_attendance.html
@@ -5,7 +5,17 @@
     <h1>Kirjaa läsnäolo</h1>
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <form class="form" action="" method="post" role="form">
+                {{ form.hidden_tag() }}
+                {{ form.attendance.label }}
+                <div>
+                    {{ form.attendance(size=sizelength, class="col-md-8") }}
+                    {% for error in form.attendance.errors %}}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                {{ form.submit(class="btn btn-default") }}
+            </form>
         </div>
     </div>
 {% endblock %}
