--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#navbar-collapse" aria-expanded="false">
                     <span class="sr-only">Navigointi</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -20,15 +20,16 @@
                 </button>
                 <a class="navbar-brand" href="{{ url_for('index') }}">Koti</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     {% if current_user.clearance == 1 %}
-                    <li><a href="{{ url_for('group_select') }}">Läsnäolo kirjaus</a></li>
-                    <li><a href="{{ url_for('attendance_check') }}">Läsnäolo tarkistus</a></li>
+                    <li><a href="{{ url_for('group_select') }}">Läsnäolon kirjaus</a></li>
+                    <li><a href="{{ url_for('attendance_check') }}">Läsnäolon tarkistus</a></li>
                     {% endif %}
                     {% if current_user.clearance == 3 %}
                     <li><a href="{{ url_for('create_user') }}">Lisää käyttäjä</a></li>
-                    <li><a href="{{ url_for('add_student') }}">Lisää oppilas</a></li>                    
+                    <li><a href="{{ url_for('add_student') }}">Lisää oppilas</a></li>
+                    <li><a href="{{ url_for('add_groups') }}">Lisää ryhmä</a></li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
