--- a/app/templates/check_attendance.html
+++ b/app/templates/check_attendance.html
@@ -3,17 +3,30 @@
 
 {% block app_content %}
     <h1>Hae Läsnäolo</h1>
-    <div class="row">
+    <div class="form-row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <form class="form" action="" method="post" role="form">
+                {{ form.hidden_tag() }}
+
+                <div class="form-group required">
+                    {{ form.group_select.label(class="control-label") }}
+                    {{ form.group_select(class="form-control") }}
+                    {% for error in form.group_select.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                {{ form.by_date(class="btn btn-default") }}
+                {{ form.by_student(class="btn btn-default") }}
         </div>
     </div>
 {% if list %}
-<table>
+<div class="table-row">
+<div class="col-md-4">
+<table class="table table-striped table-bordered table-hover table-responsive">
     <thead>
-        <tr>
-            <th scope="col">Nimi</th>
-            <th scope="col">Läsnä</th>
+        <tr style="color: green;">
+            <th scope="col-auto">Nimi</th>
+            <th scope="col-auto">Läsnä</th>
         </tr>
     </thead>
     {% for row in list %}
@@ -25,5 +38,7 @@
     </tbody>
     {% endfor %}
 </table>
+</div>
+</div>
 {% endif %}
 {% endblock %}
