--- a/app/templates/check_attendance.html
+++ b/app/templates/check_attendance.html
@@ -17,6 +17,7 @@
                 </div>
                 {{ form.by_date(class="btn btn-default") }}
                 {{ form.by_student(class="btn btn-default") }}
+            </form>
         </div>
     </div>
 {% if list %}
