--- a/app/templates/user_management.html
+++ b/app/templates/user_management.html
@@ -2,10 +2,81 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Luo Käyttäjä</h1>
+<div class="container-fluid">
+
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+        <h1>Lisää Käyttäjä</h1>
+            <form class="form" action="{{ url_for('create_user') }}" method="post" role="form">
+                {{ create_userform.hidden_tag() }}
+                <div class="form-group required">
+                    {{ create_userform.firstname.label }}
+                    {{ create_userform.firstname(class="form-control") }}
+                    {% for error in create_userform.firstname.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                <div class="form-group required">
+                    {{ create_userform.lastname.label }}
+                    {{ create_userform.lastname(class="form-control") }}
+                    {% for error in create_userform.lastname.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                <div class="form-group required">
+                    {{ create_userform.password.label }}
+                    {{ create_userform.password(class="form-control") }}
+                    {% for error in create_userform.password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                <div class="form-group required">
+                    {{ create_userform.password2.label }}
+                    {{ create_userform.password2(class="form-control") }}
+                    {% for error in create_userform.password2.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                 </div>
+                <div class="form-group required">
+                    {{ create_userform.clearance.label }}
+                    {{ create_userform.clearance(class="form-control") }}
+                    {% for error in create_userform.clearance.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </div>
+                {{ create_userform.user_submit(class="btn btn-default") }}
+
+            </form>
+        </div>
+        <h1>Hae Käyttäjät</h1>
+        <div class="col-md-6">
+            <form class="form" action="{{ url_for('check_users') }}" method="post" role="form">
+                {{ check_userform.hidden_tag() }}
+                {{ check_userform.get_users(class="btn btn-default") }}
+            </form><br>
+            {% if user_list %}
+                <div class="col-md-6">
+                    <table class="table table-striped table-bordered table-hover table-responsive">
+                    <thead>
+                        <tr style="color: green;">
+                            <th scope="col-auto">Tunnus</th>
+                            <th scope="col-auto">Käyttötaso</th>
+                            <th scope="col-auto">Poista</th>
+                        </tr>
+                    </thead>
+                    {% for row in user_list %}
+                        <tbody>
+                            <tr>
+                                <td> {{ row[1] }} </td>
+                                <td> {{ row[2] }} </td>
+                                <td><a id="{{ row[0] }}" class="btn btn-warning" href="/admin/remove_user/{{ row[0] }}">Poista</a></td>
+                            </tr>
+                        </tbody>
+                    {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
         </div>
     </div>
+</div>
 {% endblock %}
