--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,8 @@
                 <p>Olet kirjautunut sisälle Janus läsnäolon seuranta järjestelmään ja toivomme teidän käytön sujuvan mutkitta.</p>
                 <p>Käyttöä helpottavaksi oikealta navigoinnista löytyy Manual linkki, joska avautuu käyttöopas. Kyseinen opas on vielä suppea, mutta toivomme sen riittävän alkuun pääsemiseen.</p>
                 <p>Tämän ohjelmiston tarkoitus on helpottaa sinun tehtäviä oppilaiden läsnäolon kirjauksessa ja seurannassa. Eikö olekin mukavampi pystyä avaamaan selain ja syöttää sivuston url saadakseen tämän nopean toimen tehtyä?</p>
+                <br>
+                <p>Mahdollisissa virhetilanteissa olkaa yhteydessä sähköpostitse kurki.olli@outlook.com</p>
             </div>
         </div>
         <div class="row justify-content-md-center">
