--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#navbar-collapse" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsing-navbar-collapse" aria-expanded="false">
                     <span class="sr-only">Navigointi</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -20,7 +20,7 @@
                 </button>
                 <a class="navbar-brand" href="{{ url_for('index') }}">Koti</a>
             </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
+            <div class="collapse navbar-collapse" id="collapsing-navbar-collapse">
                 <ul class="nav navbar-nav">
                     {% if current_user.clearance == 1 %}
                     <li><a href="{{ url_for('group_select') }}">Läsnäolon kirjaus</a></li>
@@ -30,7 +30,6 @@
                     <li><a href="{{ url_for('create_user') }}">Käyttäjänhallinta</a></li>
                     <li><a href="{{ url_for('add_student') }}">Lisää oppilas</a></li>
                     <li><a href="{{ url_for('add_groups') }}">Lisää ryhmä</a></li>
-
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
