--- a/app/templates/check_attendance.html
+++ b/app/templates/check_attendance.html
@@ -7,16 +7,27 @@
         <div class="col-md-4">
             <form class="form" action="" method="post" role="form">
                 {{ form.hidden_tag() }}
-
+                <div class="form-group required">
+                    {{ form.student_name.label(class="control-label") }}
+                    {{ form.student_name(class="form-control") }}<br>
+                    {{ form.by_name(class="btn btn-default") }}
+                </div>
+                <div class="form-group required">
+                    {{ form.specific_date_start.label(class="control-label") }}
+                    {{ form.specific_date_start(class="form-control", placeholder="vvvv.mm.dd") }}
+                    {{ form.specific_date_end.label(class="control-label") }}
+                    {{ form.specific_date_end(class="form-control", placeholder="vvvv.mm.dd") }}<br>
+                    {{ form.by_specific_date(class="btn btn-default") }}
+                </div>
                 <div class="form-group required">
                     {{ form.group_select.label(class="control-label") }}
-                    {{ form.group_select(class="form-control") }}
+                    {{ form.group_select(class="form-control") }}<br>
                     {% for error in form.group_select.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
+                    {{ form.by_date(class="btn btn-default") }}
+                    {{ form.by_student(class="btn btn-default") }}
                 </div>
-                {{ form.by_date(class="btn btn-default") }}
-                {{ form.by_student(class="btn btn-default") }}
             </form>
         </div>
     </div>
@@ -32,7 +43,7 @@
     </thead>
     {% for row in list %}
     <tbody>
-        <tr>
+        <tr name="student">
             <td> {{ row[2] }} </td>
             <td> {{ row[3] }} </td>
         </tr>
