--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,7 +5,7 @@
         <tr valign="top">
             <td>
                 <h1>Käyttäjä: {{ user.username }}</h1>
-                {% if user.last_seen %}<p>Viimeksi kirjautunut: {{ user.last_seen }}</p>{% endif %}
+                {% if user.last_seen %}<p>Viimeksi kirjautunut: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
             </td>
         </tr>
     </table>
